--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-{"Example 1": "asd","Example 2": "asd","Example 3": "asd","Example 4": "asd"}
+["Example 1": "asd","Example 2": "asd","Example 3": "asd","Example 4": "asd"]
